Bug 943284 - Use FallbackEncoding instead of nsIPlatformCharset r=emk

MozReview-Commit-ID: 2pDp2RVV9zk